fix(backend): corregir vulnerabilidades, trazabilidad forense y rendimiento de consultas